--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8099
 spring.datasource.url = jdbc:mysql://20.197.16.90:3306/mobilephone?createDatabaseIfNotExist=true
 # Username and password
 spring.datasource.username = root
-spring.datasource.password = Janmadya@237
+spring.datasource.password = root
 
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
 # schema will be automatically updated accordingly to java entities found in
