--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8099
 # Set here configurations for the database connection
 
 # Connection url for the database "spring demo"
-spring.datasource.url = jdbc:mysql://20.197.16.90:3306/mobilephonea?createDatabaseIfNotExist=true
+spring.datasource.url = jdbc:mysql://20.197.16.90:3306/mobilephone?createDatabaseIfNotExist=true
 # Username and password
 spring.datasource.username = root
 spring.datasource.password = root
